--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -25,6 +25,13 @@
   <body>
     <nav class="navbar p-3">
       <div class="container-fluid">
+        <img
+          src="https://areajugones.sport.es/wp-content/uploads/2022/02/aedad-1080x609.jpg"
+          alt="anime-logo"
+          width="85"
+          height="50"
+          class="nav_logo"
+        />
         <a class="navbar_title" href="/">Anime World</a>
         <ul class="navbar_list">
           <li class="nav_item">
@@ -38,8 +45,8 @@
     </nav>
     <div class="container p-4">{% block content %} {% endblock %}</div>
   </body>
-  <footer id="footer p-3">
-    <ul class="list">
+  <footer id="footer p-2">
+    <ul class="list" >
       <li id="member">Daniel Ruiz</li>
       <li id="member">Roberto Maldonado</li>
       <li id="member">Giuliano Frieri</li>
