--- a/src/templates/dataT.html
+++ b/src/templates/dataT.html
@@ -9,6 +9,23 @@
     ab harum distinctio natus deserunt. Deserunt ut consequatur mollitia
     numquam?
   </p>
+  <div class="dropdown">
+    <img
+      src="https://areajugones.sport.es/wp-content/uploads/2022/02/aedad-1080x609.jpg"
+      alt="Cinque Terre"
+      width="100"
+      height="50"
+    />
+    <div class="dropdown-content">
+      <img
+        src="https://areajugones.sport.es/wp-content/uploads/2022/02/aedad-1080x609.jpg"
+        alt="Cinque Terre"
+        width="300"
+        height="200"
+      />
+      <div class="desc">Beautiful Cinque Terre</div>
+    </div>
+  </div>
   <a class="btn" href="#" role="button">Learn more</a>
 </div>
 <script src="" async defer></script>
