--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -1,13 +1,58 @@
 {% extends "layout.html"%} {% block content %}
 <header>Pagina Principal</header>
 <div class="jumbotron">
-  <h1 class="display-4">Hello, world!</h1>
+  <h1 class="titulo_pg">Anime Statistics</h1>
   <p class="lead">Aqui deberia ir un subtitulo que indicar algo</p>
-  <hr class="my -4" />
+  <hr class="separator" />
+  <section class="card">
+    <div class="content">
+      <img
+        class="img_prin"
+        src="https://areajugones.sport.es/wp-content/uploads/2022/02/aedad-1080x609.jpg"
+        alt="Anime Bg"
+      />
+    </div>
+  </section>
+  <hr class="separator" />
   <p>
     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit aliquid,
     vel dolore culpa quibusdam necessitatibus quisquam, sunt dolores non
     officiis qui ea assumenda corrupti eum, nemo ratione porro. Fuga, mollitia!
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic natus magni
+    nesciunt accusamus, eaque reiciendis nulla reprehenderit consectetur est
+    illum dolor dolores veniam velit mollitia voluptatem. Debitis tempora ullam
+    veniam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero
+    suscipit delectus officiis ducimus? Perspiciatis unde quas nobis quaerat ad,
+    exercitationem amet optio sapiente. Molestias voluptate soluta, ipsum quis
+    doloribus quo? Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+    Corporis magni fugit maxime quae deleniti impedit placeat laudantium
+    voluptatum repudiandae, officiis iste hic iusto maiores doloribus! Quos
+    maxime ipsum maiores. Quam! Lorem ipsum dolor sit amet consectetur,
+    adipisicing elit. Impedit aliquid, vel dolore culpa quibusdam necessitatibus
+    quisquam, sunt dolores non officiis qui ea assumenda corrupti eum, nemo
+    ratione porro. Fuga, mollitia! Lorem ipsum dolor, sit amet consectetur
+    adipisicing elit. Hic natus magni nesciunt accusamus, eaque reiciendis nulla
+    reprehenderit consectetur est illum dolor dolores veniam velit mollitia
+    voluptatem. Debitis tempora ullam veniam. Lorem ipsum dolor sit amet
+    consectetur adipisicing elit. Vero suscipit delectus officiis ducimus?
+    Perspiciatis unde quas nobis quaerat ad, exercitationem amet optio sapiente.
+    Molestias voluptate soluta, ipsum quis doloribus quo? Lorem, ipsum dolor sit
+    amet consectetur adipisicing elit. Corporis magni fugit maxime quae deleniti
+    impedit placeat laudantium voluptatum repudiandae, officiis iste hic iusto
+    maiores doloribus! Quos maxime ipsum maiores. Quam! Lorem ipsum dolor sit
+    amet consectetur, adipisicing elit. Impedit aliquid, vel dolore culpa
+    quibusdam necessitatibus quisquam, sunt dolores non officiis qui ea
+    assumenda corrupti eum, nemo ratione porro. Fuga, mollitia! Lorem ipsum
+    dolor, sit amet consectetur adipisicing elit. Hic natus magni nesciunt
+    accusamus, eaque reiciendis nulla reprehenderit consectetur est illum dolor
+    dolores veniam velit mollitia voluptatem. Debitis tempora ullam veniam.
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero suscipit
+    delectus officiis ducimus? Perspiciatis unde quas nobis quaerat ad,
+    exercitationem amet optio sapiente. Molestias voluptate soluta, ipsum quis
+    doloribus quo? Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+    Corporis magni fugit maxime quae deleniti impedit placeat laudantium
+    voluptatum repudiandae, officiis iste hic iusto maiores doloribus! Quos
+    maxime ipsum maiores. Quam!
   </p>
   <a class="btn" href="#" role="button"> Mostrar</a>
 </div>
