--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -2,7 +2,8 @@
   margin: 0;
 }
 
-nav {
+.navbar {
+  top: 0;
   background: var(--el-color-o1);
   font-style: italic;
   position: relative;
@@ -13,7 +14,10 @@ nav {
 }
 
 .navbar_title {
+  margin: 20px;
   font-size: 20px;
+  font-weight: bold;
+  font-family: Georgia, "Times New Roman", Times, serif;
   color: var(--bg-color-c1);
   text-decoration: none;
   justify-content: left;
@@ -26,6 +30,7 @@ nav {
 
 .nav_logo {
   display: inline-block;
+  box-shadow: 0px 1px 8px 0px var(--bg-color-c2);
   border-radius: 1rem;
 }
 
@@ -44,6 +49,7 @@ nav {
 .nav_link {
   display: block;
   font-size: 20px;
+  font-family: Georgia, "Times New Roman", Times, serif;
   padding: 0.5rem 1rem;
   color: var(--bg-color-c2);
   text-decoration: none;
@@ -56,26 +62,76 @@ nav {
   color: var(--bg-color-c1);
 }
 
+.titulo_pg {
+  font-weight: bold;
+  font-family: Georgia, "Times New Roman", Times, serif;
+}
+
 body {
   background: var(--bg-color-c1);
   color: var(--el-color-o2);
   padding: 0;
 }
 
+.card {
+  border-radius: 0.5rem;
+  overflow: hidden;
+}
+
 footer {
-  padding: 4px;
   background: var(--el-color-o1);
-  color: var(--bg-color-c1);
   position: fixed;
+  color: var(--bg-color-c1);
   left: 0;
   bottom: 0;
   width: 100%;
   font-style: italic;
 }
 
+.img_prin {
+  width: 100%;
+}
+
 .list {
   display: inline-flex;
   list-style-type: none;
-  padding: 0.5rem 1rem;
+  margin: 0;
   color: var(--bg-color-c2);
+}
+
+.member_link {
+  display: block;
+  font-size: 20px;
+  margin: 5px 20px;
+  color: var(--bg-color-c2);
+  text-decoration: none;
+}
+.member_link:hover {
+  color: var(--bg-color-c1);
+  text-decoration: none;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
+    border-color 0.15s ease-in-out;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.desc {
+  padding: 15px;
+  text-align: center;
 }
