--- a/src/static/css/var.css
+++ b/src/static/css/var.css
@@ -1,7 +1,7 @@
 :root {
-  --bg-color-c1: #dfd2da;
-  --bg-color-c2: #cab4c1;
-  --el-color-o1: #814e6d;
-  --el-color-o2: #240b36;
-  --el-color-o3: #c31432;
+  --bg-color-c1: #dadbe9;
+  --bg-color-c2: #76b6b0;
+  --el-color-o1: #3a686b;
+  --el-color-o2: #60adc0;
+  --el-color-o3: #894549;
 }
