--- a/src/templates/dataT.html
+++ b/src/templates/dataT.html
@@ -1,33 +1,28 @@
 {% extends "layout.html"%} {% block content %}
 <div class="jumbotron">
   <h1 class="display-4">About</h1>
-  <p class="lead">Aqui deberia ir un subtitulo que indicar algo</p>
+  <p class="lead">Bienvenidos a esta, otra página más acerca del COVID-19</p>
   <hr class="my -4" />
   <p>
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur
-    nostrum ipsa repellat, in eius tempore repudiandae fuga iure culpa. Itaque
-    ab harum distinctio natus deserunt. Deserunt ut consequatur mollitia
-    numquam?
+    A lo largo de esta página web encontrarás distintas gráficas que reflejan
+    estadísticas acerca del COVID-19 al rededor del mundo.
   </p>
-  <div class="dropdown">
-    <img
-      src="https://areajugones.sport.es/wp-content/uploads/2022/02/aedad-1080x609.jpg"
-      alt="Cinque Terre"
-      width="100"
-      height="50"
-    />
-    <div class="dropdown-content">
-      <img
-        src="https://areajugones.sport.es/wp-content/uploads/2022/02/aedad-1080x609.jpg"
-        alt="Cinque Terre"
-        width="300"
-        height="200"
-      />
-      <div class="desc">Beautiful Cinque Terre</div>
-    </div>
-  </div>
-  <a class="btn" href="#" role="button">Learn more</a>
 </div>
-<script src="" async defer></script>
 
+<img
+  class="img_graph"
+  src="../img/muertes_colombia.png"
+  alt="muertes_colombia"
+/>
+<img
+  class="img_graph"
+  src="../img/muertes_continente.png"
+  alt="muertes_continente"
+/>
+<img
+  class="img_graph"
+  src="../img/muertes_no_pobres.png"
+  alt="muertes_no_pobres"
+/>
+<img class="img_graph" src="../img/muertes_pobres.png" alt="muertes_pobres" />
 {% endblock %}
