--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -1,61 +1,24 @@
 {% extends "layout.html"%} {% block content %}
-<header>Pagina Principal</header>
+<header>Pagina</header>
 <div class="jumbotron">
-  <h1 class="titulo_pg">Anime Statistics</h1>
-  <p class="lead">Aqui deberia ir un subtitulo que indicar algo</p>
+  <h1 class="titulo_pg">Covid Global Statistics</h1>
+  <p class="lead">Pagina proyecto para bases de datos</p>
   <hr class="separator" />
   <section class="card">
     <div class="content">
       <img
         class="img_prin"
-        src="https://areajugones.sport.es/wp-content/uploads/2022/02/aedad-1080x609.jpg"
-        alt="Anime Bg"
+        src="https://gacetamedica.com/wp-content/uploads/2020/08/GettyImages-1209688759.jpg"
+        alt="CovidImg"
       />
     </div>
   </section>
   <hr class="separator" />
   <p>
-    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit aliquid,
-    vel dolore culpa quibusdam necessitatibus quisquam, sunt dolores non
-    officiis qui ea assumenda corrupti eum, nemo ratione porro. Fuga, mollitia!
-    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic natus magni
-    nesciunt accusamus, eaque reiciendis nulla reprehenderit consectetur est
-    illum dolor dolores veniam velit mollitia voluptatem. Debitis tempora ullam
-    veniam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero
-    suscipit delectus officiis ducimus? Perspiciatis unde quas nobis quaerat ad,
-    exercitationem amet optio sapiente. Molestias voluptate soluta, ipsum quis
-    doloribus quo? Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-    Corporis magni fugit maxime quae deleniti impedit placeat laudantium
-    voluptatum repudiandae, officiis iste hic iusto maiores doloribus! Quos
-    maxime ipsum maiores. Quam! Lorem ipsum dolor sit amet consectetur,
-    adipisicing elit. Impedit aliquid, vel dolore culpa quibusdam necessitatibus
-    quisquam, sunt dolores non officiis qui ea assumenda corrupti eum, nemo
-    ratione porro. Fuga, mollitia! Lorem ipsum dolor, sit amet consectetur
-    adipisicing elit. Hic natus magni nesciunt accusamus, eaque reiciendis nulla
-    reprehenderit consectetur est illum dolor dolores veniam velit mollitia
-    voluptatem. Debitis tempora ullam veniam. Lorem ipsum dolor sit amet
-    consectetur adipisicing elit. Vero suscipit delectus officiis ducimus?
-    Perspiciatis unde quas nobis quaerat ad, exercitationem amet optio sapiente.
-    Molestias voluptate soluta, ipsum quis doloribus quo? Lorem, ipsum dolor sit
-    amet consectetur adipisicing elit. Corporis magni fugit maxime quae deleniti
-    impedit placeat laudantium voluptatum repudiandae, officiis iste hic iusto
-    maiores doloribus! Quos maxime ipsum maiores. Quam! Lorem ipsum dolor sit
-    amet consectetur, adipisicing elit. Impedit aliquid, vel dolore culpa
-    quibusdam necessitatibus quisquam, sunt dolores non officiis qui ea
-    assumenda corrupti eum, nemo ratione porro. Fuga, mollitia! Lorem ipsum
-    dolor, sit amet consectetur adipisicing elit. Hic natus magni nesciunt
-    accusamus, eaque reiciendis nulla reprehenderit consectetur est illum dolor
-    dolores veniam velit mollitia voluptatem. Debitis tempora ullam veniam.
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero suscipit
-    delectus officiis ducimus? Perspiciatis unde quas nobis quaerat ad,
-    exercitationem amet optio sapiente. Molestias voluptate soluta, ipsum quis
-    doloribus quo? Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-    Corporis magni fugit maxime quae deleniti impedit placeat laudantium
-    voluptatum repudiandae, officiis iste hic iusto maiores doloribus! Quos
-    maxime ipsum maiores. Quam!
+    Esta página web fue realizada por los estudiantes Giuliano Frieri, Roberto
+    Maldonado y Daniel Ruiz como proyecto para la clase Base de Datos del
+    semestre 2022-10 dictada por el profesor Jimeno Pava
   </p>
   <a class="btn" href="#" role="button"> Mostrar</a>
 </div>
-<script src="" async defer></script>
-
 {% endblock %}
