--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -30,7 +30,7 @@
 
 .nav_logo {
   display: inline-block;
-  box-shadow: 0px 1px 8px 0px var(--bg-color-c2);
+  /*box-shadow: 0px 1px 8px 0px var(--bg-color-c2);*/
   border-radius: 1rem;
 }
 
@@ -80,16 +80,20 @@ body {
 
 footer {
   background: var(--el-color-o1);
-  position: fixed;
-  color: var(--bg-color-c1);
+  position: static;
   left: 0;
-  bottom: 0;
+  bottom: 0vh;
+  color: var(--bg-color-c1);
   width: 100%;
   font-style: italic;
 }
 
 .img_prin {
   width: 100%;
+}
+
+.img_graph {
+  width: 50%;
 }
 
 .list {
@@ -114,13 +118,16 @@ footer {
 }
 
 .dropdown {
-  position: relative;
+  position: flex;
+  font-size: 24px;
+  margin-right: 3rem;
   display: inline-block;
 }
 
 .dropdown-content {
   display: none;
-  position: absolute;
+  font-size: 15px;
+  position: relative;
   background-color: #f9f9f9;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
@@ -129,6 +136,10 @@ footer {
 
 .dropdown:hover .dropdown-content {
   display: block;
+  position: absolute;
+  margin-top: 1px;
+  font: 10px;
+  bottom: 100%; /* added this attribute */
 }
 
 .desc {
