--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -20,19 +20,20 @@
       rel="stylesheet"
       href="{{url_for('static', filename='css/main.css')}}"
     />
+    <script src=""></script>
   </head>
 
   <body>
     <nav class="navbar p-3">
       <div class="container_fluid">
         <img
-          src="https://areajugones.sport.es/wp-content/uploads/2022/02/aedad-1080x609.jpg"
+          src="https://cdn-icons-png.flaticon.com/128/2760/2760528.png"
           alt="anime-logo"
-          width="85"
+          width="50"
           height="50"
           class="nav_logo"
         />
-        <a class="navbar_title" href="/">Anime World</a>
+        <a class="navbar_title" href="/">Just Another Covid Page</a>
         <ul class="navbar_list">
           <li class="nav_item">
             <a class="nav_link" href="/">Home</a>
@@ -45,16 +46,47 @@
     </nav>
     <div class="container p-4">{% block content %} {% endblock %}</div>
   </body>
+
   <footer id="footer">
     <ul class="list">
       <li id="member">
-        <a class="member_link" href="">Daniel Ruiz</a>
+        <div class="dropdown">
+          Daniel Ruiz
+          <div class="dropdown-content">
+            <img
+              src="BasedDatos\Pagina-Web-BDD\img\Daniel.jpeg"
+              alt="Daniel Ruiz"
+              width="200"
+              height="100"
+            />
+          </div>
+        </div>
       </li>
       <li id="member">
-        <a class="member_link" href="">Roberto Maldonado</a>
+        <div class="dropdown">
+          Giuliano Frieri
+          <div class="dropdown-content">
+            <img
+              src="BasedDatos\Pagina-Web-BDD\img\Giuls.jpg"
+              alt="Giuliano Frieri"
+              width="200"
+              height="100"
+            />
+          </div>
+        </div>
       </li>
       <li id="member">
-        <a class="member_link" href="">Giuliano Frieri</a>
+        <div class="dropdown pad">
+          Roberto Maldonado
+          <div class="dropdown-content">
+            <img
+              src="BasedDatos\Pagina-Web-BDD\img\Roberto.png"
+              alt="Roberto Maldonado"
+              width="200"
+              height="100"
+            />
+          </div>
+        </div>
       </li>
     </ul>
   </footer>
