--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -1,8 +1,8 @@
 {% extends "layout.html"%} {% block content %}
-<header>Pagina</header>
+<header></header>
 <div class="jumbotron">
   <h1 class="titulo_pg">Covid Global Statistics</h1>
-  <p class="lead">Pagina proyecto para bases de datos</p>
+  <p class="lead">Bienvenidos a esta, otra página más acerca del COVID-19</p>
   <hr class="separator" />
   <section class="card">
     <div class="content">
@@ -19,6 +19,5 @@
     Maldonado y Daniel Ruiz como proyecto para la clase Base de Datos del
     semestre 2022-10 dictada por el profesor Jimeno Pava
   </p>
-  <a class="btn" href="#" role="button"> Mostrar</a>
 </div>
 {% endblock %}
