--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -54,10 +54,10 @@
           Daniel Ruiz
           <div class="dropdown-content">
             <img
-              src="BasedDatos\Pagina-Web-BDD\img\Daniel.jpeg"
+              src="static/img/Daniel.jpeg"
               alt="Daniel Ruiz"
               width="200"
-              height="100"
+              height="200"
             />
           </div>
         </div>
@@ -67,10 +67,10 @@
           Giuliano Frieri
           <div class="dropdown-content">
             <img
-              src="BasedDatos\Pagina-Web-BDD\img\Giuls.jpg"
+              src="static/img/Giuls.jpg"
               alt="Giuliano Frieri"
               width="200"
-              height="100"
+              height="200"
             />
           </div>
         </div>
@@ -80,10 +80,10 @@
           Roberto Maldonado
           <div class="dropdown-content">
             <img
-              src="BasedDatos\Pagina-Web-BDD\img\Roberto.png"
+              src="static/img/Roberto.png"
               alt="Roberto Maldonado"
               width="200"
-              height="100"
+              height="200"
             />
           </div>
         </div>
