--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -93,7 +93,17 @@ footer {
 }
 
 .img_graph {
-  width: 50%;
+  display: inline-block;
+  width: 450px;
+}
+
+.row {
+  display: flex;
+}
+
+.column {
+  flex: 50%;
+  padding: 1px;
 }
 
 .list {
