Intento de dropdown 1

--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -76,7 +76,7 @@
         </div>
       </li>
       <li id="member">
-        <div class="dropdown pad">
+        <div class="dropdown">
           Roberto Maldonado
           <div class="dropdown-content">
             <img
