--- a/src/templates/dataT.html
+++ b/src/templates/dataT.html
@@ -8,6 +8,24 @@
   </p>
 </div>
 <hr class="my -4" />
+<div class="dropdown">
+  <a
+    class="btn btn-secondary dropdown-toggle"
+    href="#"
+    role="button"
+    id="dropdownMenuLink"
+    data-bs-toggle="dropdown"
+    aria-expanded="false"
+  >
+    Opciones
+  </a>
+  <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+    <li><a class="dropdown-item" href="#">Action</a></li>
+    <li><a class="dropdown-item" href="#">Another action</a></li>
+    <li><a class="dropdown-item" href="#">Something else here</a></li>
+  </ul>
+</div>
+<hr class="my -4" />
 <div class="row">
   <div class="column">
     <img
@@ -58,5 +76,4 @@
     />
   </div>
 </div>
-<hr class="my -4" />
 {% endblock %}
