--- a/src/templates/tMuePobres.html
+++ b/src/templates/tMuePobres.html
@@ -20,37 +20,28 @@
     Opciones
   </a>
   <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+    <li><a class="dropdown-item" href="#">Continente Diarios</a></li>
+    <li><a class="dropdown-item" href="#">Continente Muertes</a></li>
+    <li><a class="dropdown-item" href="#">Muertes paises No Pobres</a></li>
+    <li><a class="dropdown-item" href="#">Muertes paises Pobres</a></li>
     <li>
-      <a class="dropdown-item" href="/tabla-casos-continente"
-        >Continente Diarios</a
-      >
-    </li>
-    <li>
-      <a class="dropdown-item" href="/tabla-muertes-continente"
-        >Continente Muertes</a
-      >
-    </li>
-    <li>
-      <a class="dropdown-item" href="/tabla-muertes-paises-no-pobres"
-        >Muertes paises No Pobres</a
-      >
-    </li>
-    <li>
-      <a class="dropdown-item" href="/tabla-muertes-paises-pobres"
-        >Muertes paises Pobres</a
-      >
-    </li>
-    <li>
-      <a class="dropdown-item" href="/tabla-casos-colombia"
+      <a class="dropdown-item" href="#"
         >Casos diarios Colombia vs America Sur</a
       >
     </li>
     <li>
-      <a class="dropdown-item" href="/tabla-muertes-colombia"
-        >Muertes Colombia vs America Sur</a
-      >
+      <a class="dropdown-item" href="#">Muertes Colombia vs America Sur</a>
     </li>
   </ul>
 </div>
 <hr class="my -4" />
+
+<div class="tabla">
+  <img
+    class="img_graph"
+    src="static/img/muertes_pobres.png"
+    alt="muertes_pobres"
+  />
+</div>
+
 {% endblock %}
