--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -80,7 +80,7 @@ body {
 
 footer {
   background: var(--el-color-o1);
-  position: static;
+  position: fixed;
   left: 0;
   bottom: 0vh;
   color: var(--bg-color-c1);
@@ -145,6 +145,14 @@ footer {
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
+}
+
+.dropdown:hover .dropdown-item {
+  display: block;
+  position: absolute;
+  margin-top: 1px;
+  font: 10px;
+  bottom: 100%; /* added this attribute */
 }
 
 .dropdown:hover .dropdown-content {
