--- a/src/templates/dataT.html
+++ b/src/templates/dataT.html
@@ -3,11 +3,12 @@
   <h1 class="titulo_pg">Graphs</h1>
   <p class="lead"></p>
   <p>
-    A lo largo de esta sección web encontrarás distintas gráficas que reflejan
-    estadísticas acerca del COVID-19 al rededor del mundo.
+    A lo largo de esta sección de nuestra web podras navegar entre distintas
+    gráficas que reflejan estadísticas acerca del COVID-19 alrededor del mundo.
   </p>
 </div>
 <hr class="my -4" />
+
 <div class="dropdown">
   <a
     class="btn btn-secondary dropdown-toggle"
@@ -22,12 +23,12 @@
   <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
     <li>
       <a class="dropdown-item" href="/tabla-casos-continente"
-        >Continente Diarios</a
+        >Casos Diarios Continente</a
       >
     </li>
     <li>
       <a class="dropdown-item" href="/tabla-muertes-continente"
-        >Continente Muertes</a
+        >Muertes por Continente</a
       >
     </li>
     <li>
@@ -52,5 +53,6 @@
     </li>
   </ul>
 </div>
+
 <hr class="my -4" />
 {% endblock %}
